# ika

./: .gitignore  CLAUDE.md  Cargo.toml  pnpm-lock.yaml
contracts/ika/: Move.toml
contracts/ika_common/: Move.toml
contracts/ika_dwallet_2pc_mpc/: Move.toml
crates/dwallet-mpc-centralized-party/: Cargo.toml
crates/dwallet-mpc-centralized-party/benches/: sign_benchmark.rs
crates/dwallet-mpc-centralized-party/src/: lib.rs
crates/ika-signing-service/: Cargo.toml
crates/ika-signing-service/src/: main.rs
sdk/ika-wasm/: Cargo.toml
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
sdk/typescript/src/client/: ika-client.ts  ika-transaction.ts  native-signing-client.ts  wasm-loader.ts
