[package]
name = "ika-signing-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ika-signing-service"
path = "src/main.rs"

[dependencies]
dwallet-mpc-centralized-party = { path = "../dwallet-mpc-centralized-party" }
sui-sdk.workspace = true
sui-types.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
